--- a/package.json
+++ b/package.json
@@ -32,5 +32,12 @@
   ],
   "peerDependencies": {
     "openclaw": ">=2026.1.0"
+  },
+  "scripts": {
+    "test": "vitest run",
+    "test:watch": "vitest"
+  },
+  "devDependencies": {
+    "vitest": "^4.0.18"
   }
 }
