--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -139,8 +139,8 @@ else
         "apiKey": "${AICODEWITH_API_KEY}",
         "models": [
           {
-            "id": "claude-sonnet-4-5-20250929",
-            "name": "Claude Sonnet 4.5",
+            "id": "claude-sonnet-4-6",
+            "name": "Claude Sonnet 4.6",
             "reasoning": false,
             "input": ["text", "image"],
             "cost": { "input": 0, "output": 0, "cacheRead": 0, "cacheWrite": 0 },
